# polaris-shield

./: .dockerignore  .gitignore  AUDIT_READINESS.md  BINDING.md  CNSA_MIGRATION.md  CONSTANT_TIME.md  CONTRIBUTING.md  Dockerfile  FORMAL_COVERAGE.md  FORMAT.md  GOV_ALIGNMENT.md  NOTICE  README.md  REPRODUCE.md  SECURITY-DISCLOSURE.md  SECURITY.md  SECURITY_ARGUMENT.md  STANDARDS_ALIGNMENT.md  STANDARDS_POSITION.md  THREAT_MODEL.md  TNO_PQC_HANDBOOK_ALIGNMENT.md  TNO_PQC_SELF_ASSESSMENT.md  VERIFICATION_GAP_MAP.md  gen_kat_vectors.py  kat_vectors.json  pyproject.toml  requirements.txt  test_acvp.py  test_acvp_slhdsa.py  test_highassurance.py  test_kats.py  test_keywrap.py  test_properties.py  test_shield.py  test_sidechannel.py  test_tno_conformance.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: formal.yml  provenance.yml  shield-ci.yml
acvp/: acvp_vectors.json
cbom/: cbom.cdx.json  make_cbom.py
formal/: COMBINER_CRYPTOVERIF.md  README.md  proverif.Dockerfile  shield.pv  shield.spthy  shield.vp  shield_combiner.cv  shield_combiner.ocv  shield_combiner_dh.cv  shield_combiner_dh.ocv  shield_combiner_indcca.cv  shield_combiner_indcca.ocv  shield_kemdem.cv  shield_kemdem.ocv  shield_ppk.pv  shield_ppk.spthy  shield_ppk.vp  shield_ppk_combiner.cv  shield_pq.vp  shield_replay.vp
interop/: CROSS_IMPL.md  INTEROP.md  __init__.py  altcodec.py  cross_impl.py  diff.Dockerfile  gen_pstv_vectors.py  pstv_vectors.json  test_pstv.py
polaris_shield/: __init__.py  __main__.py  highassurance.py  shield.py
release/: README.md  lms.Dockerfile  make_bundle.py  sign_lms.py
sbom/: make_sbom.py  sbom.cdx.json
sidechannel/: __init__.py  ct_measure.py
vorlath_shield/: __init__.py  __main__.py  highassurance.py  shield.py
